# Microsoft-Calendar-MCP

./: .env.example  .gitignore  README.md  env.bat  pyproject.toml  requirements.txt
src/: __init__.py  auth.py  server.py
src/capabilities/: calendar_tools.py  email_tools.py  system_tools.py  tasks_tools.py
src/utils/: validation.py
tests/: test_calendar_manual.py  test_email_manual.py  test_get_schedule.py  test_tasks_manual.py  test_validation.py  verify_get_schedule.py
