[project]
name = "Microsoft-Calendar-MCP"
version = "0.1.0"
description = "A Model Context Protocol server for Microsoft 365 (Calendar, Tasks, Email)"
readme = "README.md"
authors = [
    { name = "bingyu", email = "admin@bingyu.tech" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "msal",
    "httpx",
    "python-dotenv",
    "tzlocal",
]

[project.scripts]
m365-mcp = "src.server:mcp.run"
m365-auth = "src.auth:authenticate_interactive"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", ".env.example", "README.md"]

[tool.hatch.metadata]
allow-direct-references = true
